# percona-dk

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/percona_dk/: ingest.py  mcp_server.py  repo_registry.py  server.py  version_check.py
tests/: test_api.py  test_verify_ingestion.py
